# presentation_in_LaTeX

./: README.md
c_project_development/latex/: autotools.tex  build_sys.tex  c_proj.tex  dev_pipe.tex  issue.tex  main.tex
c_project_development/proj/auto_proj_2/alice/: alice.c
c_project_development/proj/auto_proj_3/: Makefile.in  config.h.in  configure  configure.scan
c_project_development/proj/auto_proj_3/alice/: Makefile.am  Makefile.in
c_project_development/proj/auto_proj_3/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.3
c_project_development/proj/auto_proj_3/bob/: Makefile.in
c_project_development/proj/auto_proj_3/lib/: Makefile.in
c_project_development/proj/auto_proj_init/lib/: lib.c
c_project_development/script/: Makefile  Makefile_bob.am  Makefile_lib.am  Makefile_root.am  bob.c  build_pcre2.sh  configure.ac  lib.h  proj_initial.sh  term_cmd.sh
